--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 <!-- pic weather -->
                 <div class="showtempic w-52 m-auto">
-                    <img src="/img/sun-default.jpg" class="object-cover" id="weather_img" alt="">
+                    <img src="./img/sun-default.jpg" class="object-cover" id="weather_img" alt="">
                 </div>
 
                 <!-- num weather -->
