--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
-<body  class=" font-saklbong bg-cover bg-center h-screen" style="background-image: url('/img/bg.jpg');">
+<body  class=" font-saklbong bg-cover bg-center h-screen" style="background-image: url('./img/bg.jpg');">
     
     <div class="px-20 pt-14 w-2/3 h-2/3 bg-blue-100  mx-auto mt-24 rounded ">
         <div class="dashboard flex ">
